# fruit-box-bot

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
fruit_box_bot/: __init__.py  __main__.py  solver.py
java/: FruitBoxSolver.java
src/: lib.rs
